--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Lareta <lareta064@gmail.com>",
 	"license": "ISC",
 	"devDependencies": {
 		"browser-sync": "^2.24.4",
@@ -38,5 +38,6 @@
 	"dependencies": {
 		"jquery": "^3.3.1"
 	},
-	"description": ""
+	"description": "",
+	"repository": "https://github.com/nobleworkshop/mywalit.git"
 }
